add: news sections

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -18,7 +18,7 @@
   @import "helper/helpers";
 
 // PAGES
-// @import ""
+@import "pages/home";
 
 // LAYOUT
 @import "layout/header", "layout/footer";
