--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -27,7 +27,8 @@ $btn-font-weight: bold;
 
 $btn-padding-y-lg: 16px;
 $btn-padding-x-lg: 99px;
-$btn-border-radius-lg: 6px;
+$btn-border-radius-lg: 10px;
+$btn-border-radius: 10px;
 
 // //  FONT FAMILY
 $font-family-base: $font-regular !important;
