--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -8,12 +8,12 @@
 .swiper-slide {
   text-align: #{$left};
   font-size: 18px;
-  min-height: 100%!important;
-  height: auto!important;
+  min-height: 100% !important;
+  height: auto !important;
 
   & > div {
-    min-height: 100%!important;
-    height: auto!important;
+    min-height: 100% !important;
+    height: auto !important;
   }
 }
 
@@ -27,14 +27,19 @@
     padding-top: 0;
 
     .swiper-pagination {
-      #{$right}: 50px;
+      #{$right}: 50%;
       #{$left}: unset;
+      display: flex;
+      align-items: center;
+      bottom: 20px;
+      top: unset;
 
       & > span {
         width: 13px;
         height: 13px;
         border-radius: 50%;
         background-color: $color-light-grey;
+        margin: 0 3px;
         &.swiper-pagination-bullet-active {
           background-color: $primary-color;
         }
@@ -48,6 +53,32 @@
           height: 18px;
           width: 18px;
           margin-left: 15px;
+        }
+      }
+    }
+
+    .swiper-navigation {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 150px;
+      justify-content: center;
+      transform: rotate(90deg);
+      z-index: 999;
+      height: 40px;
+      .swiper-button-next,
+      .swiper-button-prev {
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        background-color: $color-white;
+        box-shadow: $main-box-shadow;
+        cursor: pointer;
+        opacity: 1;
+    
+        &::after {
+          font-size: rem(18);
+          color: $primary-color;
         }
       }
     }
