--- a/src/scss/components/_mobile-menu.scss
+++ b/src/scss/components/_mobile-menu.scss
@@ -4,7 +4,7 @@ $black: #252525;
 $white: #fff;
 $grey: #eaeaea;
 
-$primary-color: #B72933;
+$primary-color: #B72933!default;
 $primary-color-dark: darken($primary-color, 10%);
 $primary-color-tint-1: lighten($primary-color, 10%);
 $primary-color-tint-2: lighten($primary-color, 20%);
