--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -18,12 +18,12 @@
     display: flex;
     align-items: center;
 
-
-    &__left, &__right {
+    &__left,
+    &__right {
       @include flex(center, space-between);
     }
 
-    &__right { 
+    &__right {
       // &__image {
       //   height: 40px;
       // }
@@ -45,10 +45,8 @@
   }
 
   &__nav {
-    background-color: $color-dark;
+    background-color: $color-white;
     color: $color-grey;
-    border-top: 1px solid $color-light-grey;
-    border-bottom: 1px solid $color-light-grey;
     padding: 25px 0;
 
     &__logo {
@@ -80,13 +78,14 @@
       align-items: center;
       justify-content: flex-end;
 
-      &__button {
-        // margin-#{$left}: auto;
-        // margin-#{$right}: 40px;
-      }
-
       &__image {
         margin-#{$right}: 10px;
+      }
+
+      .icon-search {
+        font-size: rem(20);
+        margin-inline-end: 30px;
+        color: $primary-color;
       }
     }
 
@@ -103,12 +102,13 @@
     }
 
     &__search {
-      // background-color: $color-white;
-      // margin-top: 20px;
-      position: relative;
-      // bottom: -25px;
+      position: absolute;
       display: none;
       z-index: 9999;
+      width: 40%;
+      left: 0;
+      top: 88px;
+      border-top: 1px solid;
 
       &__form {
         display: flex;
@@ -117,14 +117,14 @@
         height: 50px;
         margin-#{$left}: auto;
         margin-#{$right}: unset;
-        width: 40%;
 
         &__input {
           width: 100%;
           height: 100%;
           border: 0;
-          border-radius: 6px;
           padding-#{$left}: 10px;
+          border-bottom-left-radius: 30px;
+          border-bottom-right-radius: 30px;
 
           &:hover,
           &:focus-visible {
@@ -151,9 +151,12 @@
           border: 0;
           outline: 0;
           padding: 20px;
-          border-radius: 6px;
+          border-bottom-left-radius: 30px;
+          border-bottom-right-radius: 30px;
           position: absolute;
-          #{$right}: 0;
+          #{$right}: 30px;
+          padding: 14px 35px;
+          font-weight: bold;
         }
 
         @include media-breakpoint-down(sm) {
@@ -283,6 +286,10 @@
       //     margin-bottom: 20px;
       //   }
       // }
+
+      &__button {
+        margin-inline-end: 15px;
+      }
 
       @include media-breakpoint-down(sm) {
         &__heading {
