--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,7 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
-// -----------------------------------------------------------------------------
-
+// -----------------------------------------------------------------------------@import url('fortawesome/fontawesome-free-regular');
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&display=swap');
 @font-face {
     font-family: Almarai;
     src: url("../../../assets/fonts/Almarai-Regular.ttf");
