--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -11,7 +11,7 @@ $color-white: #fff;
 $color-light: #dbdbdb;
 $color-dark: #1c1b19;
 $color-blue: #0C4DA2;
-
+$color-brown:#1c1a18;
 // SPACING
 $section-gap: 120px;
 
@@ -27,3 +27,4 @@ $font-regular: Almarai;
 $font-bold: Almarai-bold;
 $font-extra-bold: Almarai-extra-bold;
 $font-light: Almarai-light;
+
