--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,7 +2,11 @@
     background-image: url('../img/about-bg.png');
         background-repeat: no-repeat;
         background-position-x: -621px;
-        padding: 158px 0px 355px 0px;
+        padding: 158px 0px 93px 0px;
+        @include media-breakpoint-down(md) {
+               
+            padding-bottom: 0;
+          }
         @include media-breakpoint-down(sm) {
                
             padding-bottom: 0;
@@ -39,12 +43,17 @@
     background-image: url('../img/bg2.png');
     background-repeat: no-repeat;
     padding-bottom: 175px;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
                
         padding-bottom: 0;
       }
     .decoration-wrapper{
         margin:10rem 0px;
+        @include media-breakpoint-down(sm) {
+               
+            margin:4rem 0px;
+          }
+        
     }
     .decorated-title{
         font-size: 2rem;
@@ -68,6 +77,10 @@
     .teachers{
         .margin-space{
             margin-top: 80px;
+            @include media-breakpoint-down(md) {
+               
+                margin-top: 0;
+              }
         }
         .teacher-square{
             position: relative;
@@ -146,6 +159,7 @@
         }
         .program-box{
             direction: rtl;
+            box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
 margin: 6px;
             position: relative;
             border-radius: 30px;
@@ -203,7 +217,10 @@ margin: 6px;
 }
 .decoration-wrapper {
     margin: 10rem 0px;
-
+    @include media-breakpoint-down(sm) {
+               
+        margin:4rem 0px;
+      }
     .decorated-title{
         font-size: 2rem;
         font-weight: bold;
@@ -321,11 +338,19 @@ float: right;
 }
 .margin-space2{
     margin-top: 30px;
+    @include media-breakpoint-down(md) {
+               
+        margin-top: 0px;
+      }
 }
 .bg-wrapper3{
     background-image: url('../img/bg3.png');
     background-repeat: no-repeat;
-    padding-bottom: 175px;
+    padding-bottom: 237px;
+    @include media-breakpoint-down(md) {
+               
+        padding-bottom: 20px;
+      }
     @include media-breakpoint-down(sm) {
                
         padding-bottom: 0;
@@ -334,8 +359,7 @@ float: right;
     .program-box{
         box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
         direction: rtl;
-margin: 6px;
-       display: flex;
+margin: 10px;
        justify-content: center;
        align-items: center;
         border-radius: 30px;
@@ -343,8 +367,8 @@ margin: 6px;
         
         .prog-img{
             border-radius: 30px;
-            width:30%;
-            height: 200px;
+            width:100%;
+            height: 100%;
             object-fit: cover;
         }
         .colored{
@@ -358,8 +382,11 @@ float: right;
             }
         }
         .desc{
-            padding: 20px;
-           
+            padding: 20px 0px 20px 20px;
+            @include media-breakpoint-down(sm) {
+               
+                padding: 20px;
+              }
         }
     }
   }
@@ -368,6 +395,10 @@ float: right;
         box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
         border-radius: 27px;
         background-color: #fff;
+        @include media-breakpoint-down(md) {
+               
+            margin-top: 30px;
+          }
         @include media-breakpoint-down(sm) {
                
             margin-top: 30px;
@@ -384,6 +415,10 @@ float: right;
    }
    .app-download{
       position: relative;
+      @include media-breakpoint-down(sm) {
+               
+        margin-bottom: 272px;
+      }
        .mob-img{
            width: 100%;
            object-fit: cover;
@@ -421,7 +456,24 @@ float: right;
         }
        }
    }
-    .partners{
+    .partners-section{
+        .slick-list{
+            direction: ltr;
+        }
+        .program-box{
+            margin: 6px;
+            border-radius: 27px;
+            background-color: #D5E2DB;
+            text-align: center;
+            padding: 10px 0px;
+            img{
+                width: 124px;
+               
+                object-fit: cover;
+                display: block;
+                margin: 0 auto;
+            }
+        }
         .slick-next{
             box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
             background-color: #fff;
@@ -465,4 +517,80 @@ float: right;
        
        
     }
+}
+.top-footer{
+    margin-top: 100px;
+    position: relative;
+    background-color: $color-brown;
+    color: #fff;
+    height: 20vh;
+    @include media-breakpoint-down(md) {
+               
+        position: unset;
+    height: auto;
+   
+    text-align: center;
+      }
+    
+    .highlights{
+        position: absolute;
+        top:-20%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -16%);
+    transform: translate(-50%, -16%);
+    @include media-breakpoint-down(md) {
+               
+        position: unset;
+        transform: none;
+      
+      }
+    }
+        .highlight-box{
+            padding: 20px ;
+    border-radius: 20px;
+    background-color: $color-brown;
+   text-align: center;
+   @include media-breakpoint-down(md) {
+               
+  margin: 10px 0px;
+  }
+
+    img{
+        margin: 0 auto;
+        text-align: center;
+    }
+        }
+    }
+
+footer{
+    padding: 30px;
+    background-color: $color-brown;
+    color: #fff;
+    h4{
+        color: #ABABAB;
+        font-size: 1.2rem;
+        font-weight: bold;
+        @include media-breakpoint-down(md) {
+               
+           margin-top: 30px;
+          }
+        }
+    
+    .social{
+        a{
+            margin-left: 5px;
+            display: inline;
+        }
+    }
+    a{
+        color: #fff;
+        text-decoration: none;
+        display: block;
+        transition: all 0.3s;
+    }
+    a:hover{
+        color:$primary-color;
+        text-decoration: none;
+    }
+  
 }
