--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -12,6 +12,10 @@ $color-light: #dbdbdb;
 $color-dark: #1c1b19;
 $color-blue: #0C4DA2;
 $color-brown:#1c1a18;
+$light-bg:#f9f9f9;
+$green:#009E4F;
+$green-bg:rgba(0,158,79,0.1);
+$orange-bg:rgba(206,123,44,0.1);
 // SPACING
 $section-gap: 120px;
 
