--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -18,7 +18,7 @@
   @import "helper/helpers";
 
 // PAGES
-@import "pages/home","pages/program","pages/list-design";
+@import "pages/home","pages/program","pages/list-design","pages/registeration","pages/news-details";
 
 // LAYOUT
 @import "layout/header", "layout/footer";
