--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -74,48 +74,7 @@
         }
       
     }
-    .teachers{
-        .margin-space{
-            margin-top: 80px;
-            @include media-breakpoint-down(md) {
-               
-                margin-top: 0;
-              }
-        }
-        .teacher-square{
-            position: relative;
-            border-radius: 30px;
-            text-align: center;
-            padding-bottom: 0.1rem;
-            background-color: #fff;
-            box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
-            @include media-breakpoint-down(md) {
-               
-                margin-top: 100px;
-               }
-            @include media-breakpoint-down(sm) {
-               
-               margin-top: 86px;
-              }
-            .heading-bold-1 {
-               
-                padding-top: 47px;
-            }
-            img{
-                position: absolute;
-    bottom: 58%;
-    width: 120px;
-    height: 120px;
-    border-radius: 100%;
-    border: 10px solid #fff;
-    left: 50%;
-    object-fit: cover;
-    
-    -webkit-transform: translate(-50%, -16%);
-    transform: translate(-50%, -16%);
-            }
-        }
-    }
+  
     .programs-section{
         .slick-next{
             box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
@@ -355,64 +314,8 @@ float: right;
                
         padding-bottom: 0;
       }
-  .news-section{
-    .program-box{
-        box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
-        direction: rtl;
-margin: 10px;
-       justify-content: center;
-       align-items: center;
-        border-radius: 30px;
-        background-color: #fff;
-        
-        .prog-img{
-            border-radius: 30px;
-            width:100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .colored{
-            color: $primary-color;
-        }
-        p{
-            img{
-                display: inline;
-                padding-top: 3px;
-float: right;
-            }
-        }
-        .desc{
-            padding: 20px 0px 20px 20px;
-            @include media-breakpoint-down(sm) {
-               
-                padding: 20px;
-              }
-        }
-    }
-  }
-   .gallery-section{
-       .gallery-box{
-        box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
-        border-radius: 27px;
-        background-color: #fff;
-        @include media-breakpoint-down(md) {
-               
-            margin-top: 30px;
-          }
-        @include media-breakpoint-down(sm) {
-               
-            margin-top: 30px;
-          }
-        img{
-            width: 100%;
-            object-fit: cover;
-            border-radius: 27px;
-        }
-        .desc{
-            padding: 20px;
-        }
-       }
-   }
+ 
+   
    .app-download{
       position: relative;
       @include media-breakpoint-down(sm) {
@@ -593,4 +496,153 @@ footer{
         text-decoration: none;
     }
   
+}
+.news-section{
+    .slick-next{
+        box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
+        background-color: #fff !important;
+border-radius: 100px;
+padding: 16px;
+width: 50px;
+height: 50px;
+right: -18px;
+        &::before {
+            content: "" !important;
+            background-image: url('../img/Path 883.png');
+            background-repeat: no-repeat;
+            display: inline-block;
+            width: 11px;
+            height: 20px;
+            content: "";
+        }
+    }
+    .slick-prev{
+        box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
+        left: -18px;
+        background-color: #fff !important;
+border-radius: 100px;
+padding: 16px;
+width: 50px;
+height: 50px;
+z-index: 999;
+        &::before {
+            content: "" !important;
+            background-image: url('../img/left-arrow.png');
+            background-repeat: no-repeat;
+            display: inline-block;
+            width: 11px;
+            height: 20px;
+            content: "";
+        }
+    }
+    .slick-list{
+        direction: ltr;
+    }
+    .program-box{
+        box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
+        direction: rtl;
+margin: 10px;
+       justify-content: center;
+       align-items: center;
+        border-radius: 30px;
+        background-color: #fff !important;
+        
+        .prog-img{
+            border-radius: 30px;
+            width:100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .colored{
+            color: $primary-color;
+        }
+        p{
+            img{
+                display: inline;
+                padding-top: 3px;
+float: right;
+            }
+        }
+        .desc{
+            padding: 20px 0px 20px 20px;
+            @include media-breakpoint-down(sm) {
+               
+                padding: 20px;
+              }
+        }
+    }
+  }
+
+
+
+  .gallery-section{
+    .gallery-box{
+     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important;
+     border-radius: 27px;
+     background-color: #fff;
+     @include media-breakpoint-down(md) {
+            
+         margin-top: 30px;
+       }
+     @include media-breakpoint-down(sm) {
+            
+         margin-top: 30px;
+       }
+     img{
+         width: 100%;
+         object-fit: cover;
+         border-radius: 27px;
+     }
+     .desc{
+         padding: 20px;
+     }
+    }
+}
+
+
+
+.teachers{
+    .margin-space{
+        margin-top: 80px;
+        @include media-breakpoint-down(md) {
+           
+            margin-top: 0;
+          }
+    }
+    .teacher-square{
+        position: relative;
+        border-radius: 30px;
+        text-align: center;
+        padding-bottom: 0.1rem;
+        background-color: #fff;
+        box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
+        @include media-breakpoint-down(md) {
+           
+            margin-top: 100px;
+           }
+        @include media-breakpoint-down(sm) {
+           
+           margin-top: 86px;
+          }
+        .heading-bold-1 {
+           
+            padding-top: 47px;
+        }
+        img{
+            position: absolute;
+bottom: 58%;
+width: 120px;
+height: 120px;
+border-radius: 100%;
+border: 10px solid #fff;
+left: 50%;
+object-fit: cover;
+
+-webkit-transform: translate(-50%, -16%);
+transform: translate(-50%, -16%);
+        }
+    }
+}
+.margino3{
+    margin-bottom: 10rem;
 }
