--- a/src/scss/pages/_program.scss
+++ b/src/scss/pages/_program.scss
@@ -27,6 +27,8 @@
         list-style: none;
         background-color: $light-bg;
         border-radius: .25rem;
+        color:#ababab ;
+      
     }
     .breadcrumb-item+.breadcrumb-item::before {
         float: right;
@@ -323,4 +325,75 @@ float: right;
     } 
    }
    
+}
+.header.home.prog{
+    clip-path: none !important;
+    box-shadow: 0px 0.1rem 1rem 0px rgb(0 0 0 / 15%) !important;
+}
+
+.breadcrumb-item a{
+    color:#ababab ;
+}
+.breadcrumb-item.active a{
+    color: $primary-color !important;
+}
+
+
+
+  .safer{
+    .accordion2 {
+        font-weight: 600;
+        border-radius: 30px;
+        background-color: #F9F9F9;
+  color: #444;
+  cursor: pointer;
+  padding: 34px;
+  width: 100%;
+  border: none;
+  text-align: right;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+        &::after {
+            content: '\f067'; /* Unicode character for "plus" sign (+) */
+            font-family: "FontAwesome"; 
+            font-size: 13px;
+            color: #ababab;
+            float: left;
+            margin-left: 5px;
+          }
+      }
+      .panel{
+        border-radius: 0px 0px 30px 30px;
+        padding: 0 18px;
+        background-color: #F9F9F9;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+        p{
+            padding:0px 15px 40px 15px;
+        }
+      }
+     
+      
+     
+  }
+.accordion2.active{
+    color: $primary-color;
+    padding:20px 34px;
+    &::after{
+      content: "\f068" !important; /* Unicode character for "minus" sign (-) */
+      font-family: "FontAwesome"; 
+      color: $primary-color;
+    }
+}
+.parent{
+   
+    margin-bottom:30px;
+    background-color: #f9f9f9;
+    border-radius: 30px;
+    
+}
+.colored{
+    color: $primary-color;
 }
