--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -615,7 +615,7 @@ float: right;
         text-align: center;
         padding-bottom: 0.1rem;
         background-color: #fff;
-        box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 7%) !important;
+        box-shadow: 0 0.5rem 30px 0px rgb(0 0 0 / 3%) !important;
         @include media-breakpoint-down(md) {
            
             margin-top: 100px;
@@ -629,6 +629,7 @@ float: right;
             padding-top: 47px;
         }
         img{
+            box-shadow: 0 -6px 20px 0px rgb(0 0 0 / 3%) !important;
             position: absolute;
 bottom: 58%;
 width: 120px;
