--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -52,3 +52,12 @@
     border: 1px solid transparent;
   }
 }
+
+
+input {
+  &:focus, &:active {
+    border: 0!important;
+    box-shadow: none!important;
+    outline: none!important;
+  }
+}
