--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,42 +1,55 @@
 .pagination-items {
     justify-content: center;
     margin: 30px 0;
-
+  
     .page-item {
-        margin: 0 10px;
+      margin: 0 10px;
     }
-
+  
     .page-link {
-        padding: 0;
-        width: 42px;
-        height: 42px;
-        border-radius: 50% !important;
-        // background-color: $color-light-grey-3;
-        border-color: $primary-color;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 600;
-        color: $color-grey;
-        transition: $transition-type;
-
-        &.active {
-            background-color: $primary-color;
-            color: #fff;
+      padding: 0;
+      width: 42px!important;
+      height: 42px!important;
+      border-radius: 50% !important;
+      // background-color: $color-light-grey-3;
+      border-color: $primary-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      color: $color-grey;
+      transition: $transition-type;
+  
+      &.active {
+        background: $primary-color;
+        color: #fff;
+      }
+  
+      &:hover {
+        background: #f90;
+        color: $color-white;
+      }
+  
+      .icon-left-arrow {
+        @if $direction == ltr {
+            transform: rotate(180deg);
         }
-
-        &:hover {
-            background-color: $primary-color;
-            color: $color-white;
+      }
+  
+      .icon-right-arrow {
+          @if $direction == ltr {
+              transform: rotate(180deg);
+          }
         }
     }
-}
-
-@media screen and (max-width: 900px) {
+  }
+  
+  @media screen and (max-width: 900px) {
     .pagination-items {
-        .page-link {
-            width: 40px;
-            height: 40px;
-        }
+      .page-link {
+        width: 40px;
+        height: 40px;
+      }
     }
-}
+  }
+  
