--- a/src/scss/pages/_news-details.scss
+++ b/src/scss/pages/_news-details.scss
@@ -57,7 +57,7 @@
     }
     .news-description{
         border-radius: 30px;
-        width: 70%;
+        // width: 70%;
        
         padding: 20px;
      
