--- a/src/scss/pages/_program.scss
+++ b/src/scss/pages/_program.scss
@@ -121,6 +121,7 @@
 
 .data-tabs{
     margin-top: 130px;
+    margin-bottom: 40px;
     @include media-breakpoint-down(md) {
                
         margin-top: 17px;
