--- a/src/scss/pages/_list-design.scss
+++ b/src/scss/pages/_list-design.scss
@@ -15,7 +15,7 @@
   float: right;
   padding: 0rem 1rem !important;
 
-  color: #6c757d;
+  color: #ABABAB;
   font-family: $icomoon-font-family;
   content: "\e908";
 }
@@ -278,7 +278,7 @@
   }
   .heading-1 {
     transition: all 0.3s;
-    font-size: 3rem;
+    font-size: 34px;
     color: #1c1b19;
     font-family: Almarai-bold;
     margin-bottom: 5px;
