--- a/src/scss/pages/_registeration.scss
+++ b/src/scss/pages/_registeration.scss
@@ -13,7 +13,7 @@ object-fit: cover;
     }
     .no{
         border:none !important;
-        text-align: right;
+        text-align: right !important;
         direction: rtl;
     }
     .form-control {
