--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,8 +1,10 @@
 .bg-wrapper{
-    // background-image: url('../img/about-bg.png');
+    background-image: url('../img/fullpage.png');
         background-repeat: no-repeat;
-        background-position-x: -621px;
-        padding: 158px 0px 93px 0px;
+        background-size: 100%;
+        
+        // background-position-x: -621px;
+        // padding: 158px 0px 93px 0px;
         @include media-breakpoint-down(md) {
                
             padding-bottom: 0;
@@ -42,13 +44,13 @@
 .bg-wrapper2{
     // background-image: url('../img/bg2.png');
     background-repeat: no-repeat;
-    padding-bottom: 175px;
+    // padding-bottom: 175px;
     @include media-breakpoint-down(md) {
                
         padding-bottom: 0;
       }
     .decoration-wrapper{
-        margin:10rem 0px;
+       
         @include media-breakpoint-down(sm) {
                
             margin:4rem 0px;
@@ -175,7 +177,8 @@ margin: 6px;
     }
 }
 .decoration-wrapper {
-    margin: 10rem 0px;
+    margin: 5rem 0rem 6rem 0rem;
+
     @include media-breakpoint-down(sm) {
                
         margin:4rem 0px;
@@ -305,7 +308,7 @@ float: right;
 .bg-wrapper3{
     // background-image: url('../img/bg3.png');
     background-repeat: no-repeat;
-    padding-bottom: 237px;
+   
     @include media-breakpoint-down(md) {
                
         padding-bottom: 20px;
@@ -646,4 +649,52 @@ transform: translate(-50%, -16%);
 }
 .margino3{
     margin-bottom: 10rem;
+}
+
+
+.search-trial{
+    .searchbar{
+        list-style: none;
+        margin-left: 20px;
+        font-size: 27px;
+        color: #fff;
+    }
+    .togglesearch{ 
+        border-radius: 20px 0px 0px 20px;
+        background: #E8E8E4;
+        position: absolute;
+        display: flex;
+        top: 74px;
+        left: 17%;
+        right: unset !important;
+        width: 279px !important;
+        height: 47px !important;
+        line-height: 60px;
+        box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+        border-top: 4px solid #ce7b2c !important;
+        &::before{
+            content: "";
+        position: absolute;
+        top: -30px;
+        left: 13px !important;
+        right: unset !important;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+        border-top: 14px solid transparent;
+        border-bottom: 14px solid #ce7b2c !important;
+        }
+        input[type="text"] {
+            width: 200px;
+            padding: 5px 10px;
+            margin-left: 0 !important;
+            border: 1px solid $primary-color;
+            outline: none;
+            font-size: 14px !important;
+            height: 43px;
+        }
+      .utl-btn-primary{
+          display: inline;
+          border-radius: 20px 0px 0px 20px !important;
+      }
+    }
 }
