--- a/src/scss/pages/_news-details.scss
+++ b/src/scss/pages/_news-details.scss
@@ -87,15 +87,19 @@
 
 .video-icon{
     position: absolute;
-    height: 100%;
-    width: 100%;
-    // max-width: 100%;
+    /* height: 100%; */
+    /* width: 100%; */
+    background-color: #ce7b2c;
+    width: 50px;
+    height: 50px;
+    padding: 20px;
+    border-radius: 50%;
     top: 50%;
-   
     left: 50%;
-    // width: unset !important;
-    // object-fit: unset !important;
-    // border-radius: unset !important;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    color: #fff !important;
+}
+.shadow2{
+    box-shadow: 0 0.1rem 1rem rgb(0 0 0 / 5%) !important;
 }
