--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -102,8 +102,13 @@
   .swiper-slide {
     position: relative;
     &::after{
-      content: url('../img/curve (2).png');
+      content: "";
+      background-image: url(../img/big-curve.png);
+      background-size: contain;
+      background-repeat: no-repeat;
       position: absolute;
+      width: 100%;
+      height: 100%;
       top: 68.9%;
       @include media-breakpoint-down(lg) {
        content: "";
